# graphCreator

./: .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  README.md
examples/: arrows.html  bargraph.html  robotnik.html
examples/vis-4.21.0/examples/network/events/: interactionEvents.html
maps/: robotnik.pgm  robotnik.yaml
robotnik/: graph.js
ros_graph_ws/devel/: .catkin  .rosinstall  setup.sh
ros_graph_ws/devel/lib/pkgconfig/: graph_bringup.pc  robotnik_fms_routes.pc
ros_graph_ws/devel/lib/robotnik_fms_routes/: robotnik_fms_routes_node
ros_graph_ws/devel/share/graph_bringup/cmake/: graph_bringupConfig.cmake
ros_graph_ws/devel/share/robotnik_fms_routes/cmake/: robotnik_fms_routes-msg-paths.cmake  robotnik_fms_routesConfig.cmake
ros_graph_ws/devel/share/roseus/ros/robotnik_fms_routes/: manifest.l
ros_graph_ws/src/fms_routes/: CMakeLists.txt  README.md  package.xml
ros_graph_ws/src/fms_routes/include/fms_routes/: Graph.h  timer.h
ros_graph_ws/src/fms_routes/launch/: fms_routes.launch  fms_routes_sim.launch
ros_graph_ws/src/fms_routes/src/: Dijkstra.cc  Graph.cc  fms_graph_node.cpp
ros_graph_ws/src/graph_bringup/: CMakeLists.txt  README.md
ros_graph_ws/src/graph_bringup/config/: config_routes.yaml  graph (copy).json  graph.json  graph.xml
ros_graph_ws/src/graph_bringup/launch/: graph_complete.launch
ros_graph_ws/src/graph_bringup/maps/: map.pgm  map_old.yaml
ros_graph_ws/src/graph_msgs/: CMakeLists.txt  package.xml
ros_graph_ws/src/graph_msgs/msg/: GraphArc.msg  GraphNode.msg  GraphNodeArray.msg  GraphNodePose.msg
ros_graph_ws/src/graph_msgs/srv/: Arc.srv  ArcId.srv  GetGraphNode.srv  GetGraphRoute.srv  Node.srv  NodeId.srv  ReloadGraph.srv  SetNode.srv  SetNodePos.srv
ros_graph_ws/src/robot_local_control_msgs/: CMakeLists.txt
ros_graph_ws/src/robot_local_control_msgsd/msg/: RobotStatus.msg
ros_graph_ws/src/robotnik_fms_msgs/: CMakeLists.txt  package.xml
ros_graph_ws/src/robotnik_fms_msgs/msg/: CellSet.msg  CellSetArray.msg  CurrentMissions.msg  DoorStatus.msg  DoorStatusArray.msg  MetaPlannerStatus.msg  MetaPlannerStatusArray.msg  Mission.msg  MissionsStatusString.msg  NodeInfo.msg  NodesID.msg  NodesInfo.msg  PlannerRobotStatus.msg  PlannerRobotStatusArray.msg  PresenceSensor.msg  PresenceSensorArray.msg  RobotStatus.msg  State.msg  TaskData.msg
ros_graph_ws/src/robotnik_fms_msgs/srv/: BlockNode.srv  ControlElevator.srv  Doors.srv  GenerateMission.srv  GetBlockedNode.srv  GetMissions.srv  GetNodeInfo.srv  GetRobotStatus.srv  GetRobotsStatus.srv  GetRoute.srv  InitializeCart.srv  InsertMission.srv  PushButton.srv  ReloadGraph.srv  RobotBatteryCharge.srv  RobotContinue.srv  RobotGoToAndWait.srv  RobotNodesTasks.srv  RobotPickAndPlace.srv  SetLights.srv  SetPhotocell.srv  UpdateMission.srv
ros_graph_ws/src/robotnik_fms_routes/: CMakeLists.txt  README.md  package.xml
ros_graph_ws/src/robotnik_fms_routes/config/: config.yaml  grafo_nf_2.xml  robotnik_graph.xml  robotnik_graph_4Nodes.xml  robotnik_graph_spiral.xml  test_graph.xml
ros_graph_ws/src/robotnik_fms_routes/include/robotnik_fms_routes/: DOMCount.hpp  Dijkstra.h  Graph.h
ros_graph_ws/src/robotnik_fms_routes/launch/: robotnik_fms_routes.launch  robotnik_fms_routes_sim.launch
ros_graph_ws/src/robotnik_fms_routes/src/: Dijkstra.cc  Graph.cc  robotnik_fms_graph_node.cpp
web/: robotnik.css  robotnik.html
