<?xml version="1.0"?>
<package format="2">
  <name>fms_routes</name>
  <version>0.0.0</version>
  <description>The fms_routes package</description>

 
  <maintainer email="jmaparicio@robotnik.es">Jesús Aparicio</maintainer>
  <maintainer email="jgomez@robotnik.es">Jose Gómez</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>robotnik_msgs</depend>
  <depend>robotnik_fms_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_local_control_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>xerces-c</depend>
  <depend>tf</depend>
  <depend>jsonization</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
